--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-uuid": "^2.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
